# Mini-ChatBot-System

./: .gitignore  main.py  migrate.py  plugins.py  pyproject.toml  run.py
migrations/versions/: 683b684fcdec_.py  980b752241aa_.py  e542caa6b95c_.py
models/: __init__.py  user.py
plugins/: __init__.py  _chat.py
routers/: __init__.py  account.py  app.py  auth.py
static/: manifest.json  sw.js
static/base/: _utility.css
static/css/auth/: log.css
static/css/base/: _utility.css  _widget.css
static/css/pages/: index.css
static/css/widgets/: profile.css
static/js/auth/: log.js
static/js/base/: _chat.js  _widget.js
static/js/pages/: index.js
templates/auth/: log.html
templates/pages/: index.html
templates/widgets/: profile.html  settings.html
