[project]
name = "mini-chatbot-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "openai>=2.32.0",
    "openrouter>=0.9.1",
]
